# fastapi-aws-eks-platform

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py  schemas.py
infra/: README.md  backend.tf  ecr.tf  eks.tf  state.tf  versions.tf  vpc.tf
k8s/: deployment.yaml  service.yaml
