[project]
name = "talk-booking"
version = "0.1.0"
description = "Talk Booking — FastAPI app (build-to-learn box)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F: pycodestyle+pyflakes (база) · I: import-sort · B: bugbear (ловушки)
# UP: pyupgrade (устаревший синтаксис) · SIM: упрощения
select = ["E", "F", "I", "B", "UP", "SIM"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
